--- a/app/views/productnames/new.html.erb
+++ b/app/views/productnames/new.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
 <% if current_user.rol == "enc_almacen" || current_user.rol == "gerente" %>
-<h1>Registrar Producto</h1>
+<h1>Registrar Insumo</h1>
 
 <%= render 'form' %>
 <div align="left">
