--- a/app/views/productnames/index.html.erb
+++ b/app/views/productnames/index.html.erb
@@ -1,17 +1,17 @@
 <% if current_user %>
 <% if current_user.rol == "enc_almacen" || current_user.rol == "gerente" %>
 
-<h1>Lista de Productos</h1>
+<h1>Lista de Insumo</h1>
 <div align="right">
-  <h3><%= link_to 'Registrar Producto', new_productname_path, :class => 'btn btn-jordi' %></h3>
+  <h3><%= link_to 'Registrar insumo', new_productname_path, :class => 'btn btn-jordi' %></h3>
 </div>
 
 <center>
   <div >
   <br>
     <form method="GET" action="/productnames/search">
-      Nombre: <input type="text" name="name" placeholder="Nombre de producto"> &nbsp;&nbsp;&nbsp;
-      <input type="submit" value="Buscar producto", class = 'btn btn-mini btn-info '>
+      Nombre: <input type="text" name="name" placeholder="Nombre de insumo"> &nbsp;&nbsp;&nbsp;
+      <input type="submit" value="Buscar insumo", class = 'btn btn-mini btn-info '>
     </form>
   </div>
 </center>
@@ -31,13 +31,13 @@
     <td><CENTER><%= producto.name %></CENTER></td>
     <td><CENTER><%= producto.code %></CENTER></td>
     <td>
-    <%= link_to 'Ver detalle de producto', productname_path(producto), :class => 'btn btn-mini  btn-success' %>
+    <%= link_to 'Ver detalle de insumo', productname_path(producto), :class => 'btn btn-mini  btn-success' %>
     </td>
     <td>
-    <%= link_to 'Editar producto', edit_productname_path(producto), :class => 'btn btn-mini  btn-warning' %>
+    <%= link_to 'Editar insumo', edit_productname_path(producto), :class => 'btn btn-mini  btn-warning' %>
     </td>
     <td>
-    <%= link_to 'Eliminar producto', producto, method: :delete, data: { confirm: 'Seguro de eliminar el nombre del producto?' }, :class => 'btn btn-mini btn-danger' %>
+    <%= link_to 'Eliminar insumo', producto, method: :delete, data: { confirm: 'Seguro de eliminar el nombre del insumo?' }, :class => 'btn btn-mini btn-danger' %>
     </td>
   </tr>
 <% end %>
