--- a/app/views/sales/report_search.html.erb
+++ b/app/views/sales/report_search.html.erb
@@ -4,7 +4,7 @@
 
 <div class="hero-unit">
 
-<h1>Reporte de ventas</h1><br><br>
+<h1>Reporte de Salidas</h1><br><br>
 <center>
 <form method="GET" action="/sales/search_between_dates">
 Fecha Inicio: <input type="date" name="initial_date"> &nbsp;&nbsp;&nbsp;
