--- a/app/views/sales/search.html.erb
+++ b/app/views/sales/search.html.erb
@@ -1,7 +1,7 @@
 <% if current_user %>
 <% if current_user.rol == "secre" || current_user.rol == "gerente" %>
 
-<% title "Buscar ventas" %>
+<% title "Buscar Salidas" %>
 <h1>Resultado de busqueda</h1>
 <%= render "sales_controller/index" %>
 <DIV Align=left>
