--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,7 +14,7 @@
       <p><%= f.password_field :password_confirmation, :class => 'form-control', :maxlength => '25' %></p>
 
       <p><%= f.label :rol %>
-        <%= f.select :rol, options_for_select([[ 'Tecnico', 'tecnico' ], ['Encargado almacen', 'enc_almacen']]) %>
+        <%= f.select :rol, options_for_select([[ 'Administrador', 'administrador' ], ['Encargado almacen', 'encargado almacen']]) %>
       <p><%= f.submit (@user.new_record? ? 'Crear usuario' : 'Update'), :class => 'btn btn-mini btn-jordi' %></p>
 <% end %>
 
