--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
  <footer class="panel-footer">
     <div class="container">
        <div class="opcion_footer">
-	    	<font color="white"><h2>Quienes somos?</h2></font>
+	    	<!--<font color="white"><h2>Quienes somos?</h2></font>-->
 	    	<!--<p><a href="/historia">Historia</a></p>
 	    	<p><a href="/mision">Mision</a></p>
 	    	<p><a href="/vision">Vision</a></p>
